:bug: fix z-index issue with sticky nav and search overlay

--- a/site/gdocs/topic-page.scss
+++ b/site/gdocs/topic-page.scss
@@ -128,3 +128,9 @@
         }
     }
 }
+
+.article-block__gray-section {
+    h1 {
+        text-align: center;
+    }
+}
